--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sqflite: ^2.0.2+1
   android_alarm_manager_plus: ^2.0.5
   workmanager: ^0.5.0
   audioplayers: ^0.20.1
